--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             // var device = 'iOS';
             // var device = 'Android';
             // var device = 'PC'
-         if(device == "IOS"){
+         if(device == 'iOS'){
             window.location.href = "http://m.stib.co/"
          }else{
             window.location.href = "https://play.google.com/store/apps/details?id=com.StiBLabs.StiBp2p"
